syntax = "proto3";

service ExampleService {
    rpc Hello(HelloRequest) returns (HelloResponse);
}

message HelloResponse {
    Greeting Greeting = 1;
}

message HelloRequest {
    string name = 1;
}

message Greeting {
    string template = 1;
    string name = 2;
    string rendered = 3;
}

